src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Last_Lead_Assigned__c</fullName>
        <description>Date and time on which a last lead has been assigned to this user</description>
        <inlineHelpText>Date and time on which a last lead has been assigned to this user</inlineHelpText>
        <label>Last_Lead_Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Assigned__c</fullName>
        <description>Date and time on which a last opportunity has been assigned to this user</description>
        <inlineHelpText>Date and time on which a last opportunity has been assigned to this user</inlineHelpText>
        <label>Last_Opportunity_Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MasterId__c</fullName>
        <label>MasterId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waited_Since_in_Minutes__c</fullName>
        <formula>NOW()  -  Last_Lead_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waited Since in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>